--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -22,8 +22,6 @@
                             <th class="text-center">CRM <a href="https://microsoftcorp9.crm.dynamics.com/main.aspx" title="Launch CRM in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
                             <th class="text-center">Expenses <a href="http://msexpense2" title="Launch Expenses in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
                             <th class="text-center">FRI <a href="http://aka.ms/roleguide" title="Launch Role Guide in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
-                            @*<th class="text-center">Presentations</th>
-                        <th class="text-center">Ascend Working</th>*@
                         </tr>
                     </thead>
                     @* Start TE Table *@
@@ -40,13 +38,13 @@
                                 </a>
                             </td>
                             <td class="text-center" width="19%">                         
-                                <button class="btn @(UserScore.IsCRM ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsCRM ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></button>                         
+                                <a asp-controller="Commitments" asp-action="ToggleCRMUser" asp-route-id="@UserScore.UserProfileId" title="Toggle CRM for @UserScore.FullName" class="btn @(UserScore.IsCRM ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsCRM ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>                         
                             </td>
                             <td class="text-center" width="19%">
-                                <button class="btn @(UserScore.IsExpenses ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsExpenses ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></button>
+                                <a asp-controller="Commitments" asp-action="ToggleExpensesUser" asp-route-id="@UserScore.UserProfileId" title="Toggle Expenses for @UserScore.FullName" class="btn @(UserScore.IsExpenses ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsExpenses ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>
                             </td>
                             <td class="text-center" width="19%">
-                                <button class="btn @(UserScore.IsFRI ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsFRI ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></button>
+                                <a asp-controller="Commitments" asp-action="ToggleFRIUser" asp-route-id="@UserScore.UserProfileId" title="Toggle FRI for @UserScore.FullName" class="btn @(UserScore.IsFRI ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsFRI ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>
                             </td>                           
                         </tr>
                     }
